test/should-fail/检查类型-10.j
function a takes nothing returns nothing
    local integer array n
    local handle h = null
    set n[h] = 0
endfunction
